--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0+2
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.5.4 <4.0.0'
 
 dependency_overrides:
   webview_flutter_android: ^4.1.0
@@ -19,6 +19,8 @@ dependencies:
   fluttertoast: ^8.0.4
   sqflite: ^2.2.2
   lottie: ^3.0.0
+  flutter_localizations:
+    sdk: flutter
   shared_preferences: ^2.0.15
   flutter_svg: ^1.1.6
   badges: ^3.0.2
@@ -40,7 +42,6 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   flutter_launcher_icons: ^0.13.1
   focused_menu: ^1.0.5
-  intl: ^0.19.0
   money_formatter: ^0.0.3
   pluto_menu_bar: ^3.0.0
   flutter_staggered_grid_view: ^0.4.0
@@ -56,13 +57,12 @@ dependencies:
   line_awesome_flutter: ^3.0.1
   photo_view: ^0.15.0
   connectivity_plus: ^6.1.0
-  flutter_localizations:
-    sdk: flutter
+  intl: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 flutter_icons:
   android: true
@@ -72,6 +72,7 @@ flutter_icons:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/
