1- change app icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ flutter_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/app_icon.png"
+  image_path: "assets/images/app_icoon.png"
 
 flutter:
   uses-material-design: true
